--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,95 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap');
+
+*, ::after, ::before{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  font-family: 'Poppins', sans-serif;
+  height: auto;
+  background-color: #686de0;
+}
+
+main{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+}
+
+li{
+  list-style: none;
+}
+
+.navbar{
+  position: fixed;
+  background-color: rgb(226, 226, 226);
+  width: 100%;
+  height: 10vh;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
+}
+
+.navbar ul{
+  display: flex;
+  align-items: center;
+  height: 100%;
+  padding: 0 4rem;
+  gap: 3rem;
+}
+
+.navbar a {
+  text-decoration: none;
+  color: #9f68e0;
+}
+
+.container{
+  background-color: rgb(226, 226, 226);
+  border-radius: 10px;
+  width: 90vw;
+  max-width: 800px;
+  padding: 60px 30px;
+  text-align: center;
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.3);
+}
+
+h1{
+  
+  opacity: 0.5;
+}
+
+.joke{
+  font-size: 1.5rem;
+  max-width: 550px;
+  margin: 0 auto;
+}
+
+h1, .joke{
+  margin-bottom: 2rem;
+}
+
+.btn{
+  background-color: #9f68e0;
+  border: none;
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  font-family: 'Poppins', sans-serif;
+  cursor: pointer;
+  box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
+  outline: none;
+  transition: 0.2s all;
+  font-size: 1.2rem;
+  color: #fff;
+}
+
+.btn:hover{
+  background-color: #8153b3;
+}
+
+.btn:active {
+  transform: scale(0.98);
+  /* Scaling button to 0.98 to its original size */
+  box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+  /* Lowering the shadow */
 }
